# rusty-stm32-ethernet

./: .gitignore  Cargo.toml  LICENSE  README.md  build  build_htdocs  debug  flash  rust-toolchain-nightly.toml  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs  snmp.rs  sntp.rs
src/htsrc/: index.css  index.html  index.js
