
# Usage: Change chip name in dependencies

[package]
edition = "2021"
name = "philrusty"
version = "0.1.0"
license = "MIT"

[dependencies]
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f767zi", "memory-x", "unstable-pac", "time-driver-any", "exti"]  }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-65536", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet", "dhcpv4-hostname"] }
embedded-io-async = { version = "0.6.1" }
embassy-usb = { version = "0.1.0", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
critical-section = "1.1"
embedded-storage = "0.3.1"
static_cell = { version = "2", features = ["nightly"] }

# Picoserve
picoserve = { version = "0.10.2", features = ["embassy"] }

[profile.release]
debug = 2
